add validation frontend and supplier feature
