# backend/app/Models/Supplier.php
@@ -1,0 +1,22 @@
+<?php
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+// use Illuminate\Database\Eloquent\Relations\BelongsTo;
+// use Illuminate\Database\Eloquent\Relations\HasMany;
+class Supplier extends Model
+{
+    protected $fillable = [
+        'name',
+        'phone',
+        'email',
+        'address',
+        'is_active',
+        'created_at',
+        'updated_at'
+    ];
+    public function goodReceipt()
+    {
+        // return $this->hasMany()
+    }
+}
